<resources>
    <string name="app_name">Learning App</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_content">My first app</string>
    <string name="register">Register</string>
    <string name="register_content">Create new account</string>
    <string name="signup">Sign up</string>
    <string name="name">Name and Surname</string>
    <string name="phone">Phone</string>
    <string name="add_photo">Add Photo</string>
    <string name="profile">Profile</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="add_comment">Write a comment...</string>
    <string name="timeline">Timeline</string>
    <string name="post">Post</string>
    <string name="post_status_hint">What\'s on your mind?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="birthday">Birthday</string>
    <string name="update_avatar">Update Avatar</string>
    <string name="login_success">Login Success</string>
    <string name="wrong_credentials">Wrong login credentials</string>
    <string name="wrong_credentials_format">Wrong email format or password length</string>
    <string name="get_timeline_failed">Cannot load timeline</string>
</resources>
