<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.duccm.learningapp.EditProfileDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/edit_profile" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/edit_avatar"
            style="@style/FormInputBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/update_avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/FormInputEditBlackText"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/FormInputEditBlackText"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/edit_phone"
            style="@style/FormInputEditBlackText"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday" />

        <EditText
            android:id="@+id/edit_birthday"
            style="@style/FormInputEditBlackText"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/birthday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/FormInputEditBlackText"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_update"
            style="@style/FormInputButton"
            android:background="@drawable/rounded_button"
            android:text="@string/update" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</ScrollView>
