<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/EntryLayout"
    android:orientation="vertical">

    <TextView
        style="@style/LayoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_content"
        style="@style/EntryTextColor"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/FormInputEdit"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/FormInputEdit"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_log_in"
        style="@style/FormInputButton"
        android:background="@drawable/rounded_button"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/EntryTextColor"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | "
            style="@style/EntryTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/EntryTextColor"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
