<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PostStatusDialog"
    tools:context="com.example.duccm.learningapp.PostStatusDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textColor="@color/grey"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/post"
            android:textColor="@color/facebook_dark_blue"
            android:textSize="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/post_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            style="@style/PostAvatar" />

        <TextView
            android:id="@+id/name"
            style="@style/PostName" />

    </LinearLayout>

    <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_comment"
        android:hint="@string/post_status_hint"
        android:padding="10dp"
        android:textColorHint="@color/grey" />

</LinearLayout>
