<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PostItem">

    <LinearLayout
        android:id="@+id/post_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            style="@style/PostAvatar" />

        <LinearLayout
            android:id="@+id/name_time"
            style="@style/PostNameTime">

            <TextView
                android:id="@+id/name"
                style="@style/PostName" />

            <TextView
                android:id="@+id/time"
                style="@style/PostTime" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        style="@style/PostStatus" />

    <ImageView
        android:id="@+id/image"
        style="@style/PostImage" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/image"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:id="@+id/post_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/post_like"
            style="@style/PostButton">

            <ImageView
                style="@style/PostButtonImage"
                android:src="@drawable/ic_like" />

            <TextView
                style="@style/PostButtonText"
                android:text="@string/like" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/post_comment"
            style="@style/PostButton">

            <ImageView
                style="@style/PostButtonImage"
                android:src="@drawable/ic_comment" />

            <TextView
                style="@style/PostButtonText"
                android:text="@string/comment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/post_share"
            style="@style/PostButton">

            <ImageView
                style="@style/PostButtonImage"
                android:src="@drawable/ic_share" />

            <TextView
                style="@style/PostButtonText"
                android:text="@string/share" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
